--- a/Shopping Page/shopping.html
+++ b/Shopping Page/shopping.html
@@ -1,107 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping_page</title>
-    <link rel="stylesheet" href="shopping.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shopping_page</title>
+  <link rel="stylesheet" href="shopping.css">
+  <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
-
-    <header id="header"></header>
-
-     <div id="catagories"></div>
-
-     <div id="discover"></div>
-
-     
-
-<div id="maincontainer">
-
-  <div id="gridshow"></div>
-
-  <div style="display: flex;width: 100%;margin: auto;margin-top: 15px;">
-    <div class="women">
-       <img src="https://shopping.imimg.com/style/ladies-wear.png" alt="">
+  <nav>
+    <div id="nav">
+      <div id="logo">
+        <img src="/images/logo.png" alt="">
+      </div>
+      <div class="search">
+        <div class="shop"> Shop </div>
+        <div id="typesearch">
+          <input type="search" placeholder="What are you looking for ?" id="search_item">
+        </div>
+        <div id="searchbtn">
+          <button> <i class="material-icons">search</i> Search</button>
+        </div>
+      </div>
     </div>
-    <div >
-      <h1 style="margin-top: 20px; font-size: 27px; font-family: Arial, Helvetica, sans-serif;
-      color: #111111;">Ladies Wear</h1> 
+  </nav>
+  <div id="catagories"></div>
+
+  <div id="discover"></div>
+
+
+
+  <div id="maincontainer">
+
+    <div id="gridshow"></div>
+
+    <div style="display: flex;width: 100%;margin: auto;margin-top: 15px;">
+      <div class="women">
+        <img src="https://shopping.imimg.com/style/ladies-wear.png" alt="">
+      </div>
+      <div>
+        <h1 style="margin-top: 20px; font-size: 27px; font-family: Arial, Helvetica, sans-serif;
+      color: #111111;">Ladies Wear</h1>
+      </div>
     </div>
-   </div>  
 
-<div id="ladiesData"></div> 
+    <div id="ladiesData"></div>
 
 
-<button id="viewmore">View More</button>
+    <button id="viewmore">View More</button>
 
-   
-<div style="display: flex;width: 100%;margin: auto;margin-top: 15px;">
-  <div class="women">
-     <img src="https://shopping.imimg.com/style/men-wear.png" alt="">
+
+    <div style="display: flex;width: 100%;margin: auto;margin-top: 15px;">
+      <div class="women">
+        <img src="https://shopping.imimg.com/style/men-wear.png" alt="">
+      </div>
+      <div>
+        <h1 style="margin-top: 20px; font-size: 27px; font-family: Arial, Helvetica, sans-serif;
+    color: #111111;">Men Wear</h1>
+      </div>
+    </div>
+
+
+
+    <div id="mendata"></div>
+
+    <button id="viewmore2">View More</button>
+
+
+    <div style="display: flex;width: 100%;margin: auto;margin-top: 15px;">
+      <div class="women">
+        <img src="https://shopping.imimg.com/style/mobile-accessories.png" alt="">
+      </div>
+      <div>
+        <h1 style="margin-top: 20px; font-size: 27px; font-family: Arial, Helvetica, sans-serif;
+    color: #111111;">Mobile Accessories</h1>
+      </div>
+    </div>
+
+    <div id="accessories"></div>
+
+    <button id="viewmore3">View More</button>
+
+
+
+    <div style="display: flex;width: 100%;margin: auto;margin-top: 15px ;">
+      <div class="women">
+        <img src="https://shopping.imimg.com/style/mobile-accessories.png" alt="">
+      </div>
+      <div>
+        <h1 style="margin-top: 20px; font-size: 27px; font-family: Arial, Helvetica, sans-serif;
+    color: #111111;">HomeDecor</h1>
+      </div>
+    </div>
+
+    <div id="HomeDecor"></div>
+
+    <button id="viewmore4">View More</button>
+
   </div>
-  <div >
-    <h1 style="margin-top: 20px; font-size: 27px; font-family: Arial, Helvetica, sans-serif;
-    color: #111111;">Men Wear</h1> 
+
+
+  <div id="bottom">
+    <div>Copyright © 1996-2023 UpStore. All rights reserved.</div>
+
+    <div></div>
+
+    <div id="copyright">
+      <div>Home</div>
+      <div>Sell on UpStore </div>
+      <div>FAQ </div>
+      <div>Terms of Use </div>
+      <div> Privacy Policy</div>
+    </div>
   </div>
-</div>  
-
-
-
-<div id="mendata"></div>
-
-<button id="viewmore2">View More</button>
-
-
-<div style="display: flex;width: 100%;margin: auto;margin-top: 15px;">
-  <div class="women">
-     <img src="https://shopping.imimg.com/style/mobile-accessories.png" alt="">
-  </div>
-  <div >
-    <h1 style="margin-top: 20px; font-size: 27px; font-family: Arial, Helvetica, sans-serif;
-    color: #111111;">Mobile Accessories</h1> 
-  </div>
-</div> 
-
-<div id="accessories"></div>
-
-<button id="viewmore3">View More</button>
-
-
-
-<div  style="display: flex;width: 100%;margin: auto;margin-top: 15px ;">
-  <div class="women">
-     <img src="https://shopping.imimg.com/style/mobile-accessories.png" alt="">
-  </div>
-  <div >
-    <h1 style="margin-top: 20px; font-size: 27px; font-family: Arial, Helvetica, sans-serif;
-    color: #111111;">HomeDecor</h1> 
-  </div>
-</div> 
-
-<div id="HomeDecor"></div>
-
-<button id="viewmore4">View More</button>
-   
-</div>
-
-
-<div id="bottom">
-   <div>Copyright © 1996-2023 IndiaMART. All rights reserved.</div>
-   
-   <div></div>
-
-   <div id="copyright">
-    <div>Home</div>
-    <div>Sell on IndiaMART </div>
-    <div>FAQ </div>
-    <div>Terms of Use  </div>
-    <div> Privacy Policy</div>
-   </div>
-</div>
 
 </body>
 
-<script src="shopping.js"></script>
+  <script src="shopping.js"></script>
+
 </html>
