--- a/Home page/Index.html
+++ b/Home page/Index.html
@@ -53,11 +53,19 @@
         <p>Food & Agriculture</p>
     </div>
     <div id="banner">
-        <img style="width: 100%;" onclick="login()" src="/images/Banner2.jpg" alt="">
+        <!-- <img id="poster"style="width: 100%;" onclick="login()" src="/images/Banner2.jpg" alt=""> -->
     </div>
 
     
     <!-- Category section -->
+    <div id="category">
+        <a href="#construction">Construction Materials</a>
+        <a href="#electronics">Electronics</a>
+        <a href="#medicine">Medicines</a>
+        <a href="#hospital">Medical Equipment</a>
+        <a href="#industry">Industrial Equipment</a>
+       
+    </div>
     <!-- We connect Buyers and sellers Banner-->
     <div id="connect">
         <div>
@@ -92,7 +100,7 @@
     <!-- Building Construction Material & Equipment -->
 
     <div class="main">
-        <div>
+        <div id="construction">
             <h2>Building Construction Material & Equipment</h2>
             <div class="sideimg">
                 <div class="opq-img">
@@ -229,7 +237,7 @@
 
         <hr width="100%" color="black" size="10px" align="center" />
 
-        <div>
+        <div id="electronics">
             <h2>Electronics & Electrical Goods & Supplies</h2>
             <div class="sideimg">
                 <div class="opq-img">
@@ -374,7 +382,7 @@
         <!-- Pharmaceutical Drug, Medicine, Medical Care & Consultation -->
 
 
-        <div>
+        <div id="medicine">
             <h2>Pharmaceutical Drug, Medicine, Medical Care & Consultation</h2>
             <div class="sideimg">
                 <div class="opq-img">
@@ -486,7 +494,7 @@
         <!-- Hospital and Medical Equipment -->
 
 
-        <div>
+        <div id="hospital">
             <h2>Hospital and Medical Equipment</h2>
             <div class="sideimg">
                 <div class="opq-img">
@@ -597,7 +605,7 @@
 
         <!-- Industrial Plants, Machinery & Equipment -->
 
-        <div>
+        <div id="industry">
             <h2>Industrial Plants, Machinery & Equipment</h2>
             <div class="sideimg">
                 <div class="opq-img">
