--- a/Product Page/product.html
+++ b/Product Page/product.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="product.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet"
@@ -29,6 +30,10 @@
                 <div id="searchbtn">
                     <button> <i class="material-icons">search</i> Search</button>
                 </div>
+            </div>
+            <div onclick="gotocart()">
+                <h4 id="crt" style="color: white;"><i class="material-icons" style="color: white;">shopping_bag</i>Cart
+                </h4>
             </div>
             <div style="display: flex; gap: 10px;">
                 <h2 style="color: wheat;">Hello, <h2 id="uname">Hello</h2>
@@ -82,17 +87,17 @@
     <!-- Footer Section -->
     <div id="bottom">
         <div>Copyright © 1996-2023 UpStore. All rights reserved.</div>
-    
+
         <div></div>
-    
+
         <div id="copyright">
-          <div>Home</div>
-          <div>Sell on UpStore </div>
-          <div>FAQ </div>
-          <div>Terms of Use </div>
-          <div> Privacy Policy</div>
+            <div>Home</div>
+            <div>Sell on UpStore </div>
+            <div>FAQ </div>
+            <div>Terms of Use </div>
+            <div> Privacy Policy</div>
         </div>
-      </div>
+    </div>
 </body>
 <script src="product.js"></script>
 
