--- a/Search Page/Search.html
+++ b/Search Page/Search.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Search Result</title>
   <link rel="stylesheet" href="Search.css">
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet"
@@ -31,9 +32,11 @@
           <button> <i class="material-icons">search</i> Search</button>
         </div>
       </div>
+      <div onclick="gotocart()">
+        <h4 id="crt" style="color: white;"><i class="material-icons" style="color: white;">shopping_bag</i>Cart</h4>
+      </div>
       <div style="display: flex; gap: 10px;">
         <h2 style="color: wheat;">Hello, <h2 id="uname">Hello</h2>
-        </h2>
       </div>
     </div>
   </nav>
@@ -43,33 +46,38 @@
   <div id="container">
     <div id="filter-box">
       <h1>FILTERS</h1>
-      <div class="filter1">
-        <input type="checkbox" name="Men" value="Men" tabindex="1"> Men<br>
-        <input type="checkbox" name="Women" value="Women" tabindex="2"> Women
-      </div>
-      <h3>CATEGORIES</h3>
-      <div class="filter1">
-        <input type="checkbox" name="shirt" value="shirt" tabindex="1"> Shirt<br>
-        <input type="checkbox" name="jeans" value="jeans" tabindex="2"> Jeans<br>
-        <input type="checkbox" name="kurta" value="kurta" tabindex="3"> Kurta<br>
-        <input type="checkbox" name="dresses" value="dresses" tabindex="4"> Dresses<br>
-      </div>
-      <h3>BRANDS</h3>
-      <div class="filter1">
-        <input type="checkbox" name="shirt" value="shirt" tabindex="1"> Shirt<br>
-        <input type="checkbox" name="jeans" value="jeans" tabindex="2"> Jeans<br>
-        <input type="checkbox" name="kurta" value="kurta" tabindex="3"> Kurta<br>
-        <input type="checkbox" name="dresses" value="dresses" tabindex="4"> Dresses<br>
-      </div>
-      <h3>PRICE</h3>
-      <div class="filter1">
-        <input type="checkbox" name="shirt" value="shirt" tabindex="1"> Low to High<br>
-        <input type="checkbox" name="jeans" value="jeans" tabindex="2"> High to Low<br>
-      </div>
+      <form id="category" class="filter1">
+        <input type="checkbox" id="men" name="men" value="men" tabindex="1"> Men<br>
+        <input type="checkbox" id="women" name="women" value="women" tabindex="2"> Women
+      </form>
+
+      <form id="sort" class="filter1">
+        <h3>PRICE</h3>
+        <input type="checkbox" id="LTH" value="LTH" tabindex="1"> Low to High<br>
+        <input type="checkbox" id="HTL" value="HTL" tabindex="2"> High to Low<br>
+      </form>
+
+      <form class="filter1">
+        <h3>BRANDS</h3>
+        <input type="checkbox" value="shirt" tabindex="1"> Shirt<br>
+        <input type="checkbox" value="jeans" tabindex="2"> Jeans<br>
+        <input type="checkbox" value="Wama Trendz" tabindex="3"> Wama Trendz<br>
+        <input type="checkbox" value="pannkh" tabindex="4"> Pannkh<br>
+      </form>
     </div>
     <div id="product-container">
-        
+
     </div>
+  </div>
+
+  <div id="notavailable">
+    <p>You Searched for <span id="searched"></span></p>
+    <br>
+    <img src="https://constant.myntassets.com/web/assets/img/11488523304066-search404.png" alt="">
+
+    <h1>We Couldn't find any Matches! </h1>
+
+    <p>Please check the spelling or try searching something else</p>
   </div>
 
 
