--- a/Cartpage/cart.html
+++ b/Cartpage/cart.html
@@ -22,7 +22,7 @@
   <nav>
     <div id="nav">
       <div id="logo">
-        <img src="/images/logo.png" alt="">
+        <img src="/images/web.jpg" alt="">
       </div>
       <div id="menu">
         <div class="blocks">
@@ -40,7 +40,10 @@
     </div>
   </nav>
 
-
+<!-- continue shopping -->
+  <div id="shopping">
+    <a href="/Shopping Page/shopping.html">-Continue Shopping</a>
+  </div>
   <!-- nav bar  -->
 
   <h2 id="total">Your total Products in the Cart = <span id="fav-total">0</span></h2>
