--- a/Shopping Page/shopping.html
+++ b/Shopping Page/shopping.html
@@ -14,9 +14,9 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<link rel="stylesheet" href="response.css">
+    <link rel="stylesheet" href="response.css">
 
-     
+
 <body>
 
     <!-- navbar -->
@@ -40,12 +40,19 @@
                 </h4>
             </div>
             <div style="display: flex; gap: 10px;">
-                <h2 style="color: wheat;">Hello, <h2 id="uname"></h2></h2>
+                <h2 style="color: wheat;">Hello, <h2 id="uname"></h2>
+                </h2>
             </div>
         </div>
     </nav>
 
     <div id="catagories">
+        <a id="Mclick">
+            <div id="tac">
+                <div> <img src="https://shopping.imimg.com/style/men-wear.png" alt=""></div>
+                <span>Men Wear</span>
+            </div>
+        </a>
         <a id="LadClick">
             <div id="tac">
                 <div id="LadiesClick"> <img src="https://shopping.imimg.com/style/ladies-wear.png" alt=""></div>
@@ -53,23 +60,7 @@
             </div>
         </a>
 
-        <a id="Mclick">
-            <div id="tac">
-                <div> <img src="https://shopping.imimg.com/style/men-wear.png" alt=""></div>
-                <span>Men Wear</span>
-            </div>
-        </a>
 
-        <div id="tac">
-            <div> <img src="https://shopping.imimg.com/style/footwear.png" alt=""></div>
-            <span>FootWear</span>
-        </div>
-
-
-        <div id="tac">
-            <div> <img src="https://shopping.imimg.com/style/beauty-products.png" alt=""></div>
-            <span>Beauty <br> Products</span>
-        </div>
 
         <a id="Accesserioclick">
             <div id="tac">
@@ -84,6 +75,17 @@
                 <span>Home Decor</span>
             </div>
         </a>
+
+        <div id="tac">
+            <div> <img src="https://shopping.imimg.com/style/footwear.png" alt=""></div>
+            <span>FootWear</span>
+        </div>
+
+
+        <div id="tac">
+            <div> <img src="https://shopping.imimg.com/style/beauty-products.png" alt=""></div>
+            <span>Beauty <br> Products</span>
+        </div>
 
         <div id="tac">
             <div> <img src="https://shopping.imimg.com/style/artificial-jewellery.png" alt=""></div>
@@ -577,7 +579,9 @@
         <div></div>
 
         <div id="copyright">
-         <a style="text-decoration: none;" href="/Home page/Index.html"><div>Home</div></a> 
+            <a style="text-decoration: none;" href="/Home page/Index.html">
+                <div>Home</div>
+            </a>
             <div>Sell on UpStore </div>
             <div>FAQ </div>
             <div>Terms of Use </div>
