--- a/Cartpage/cart.html
+++ b/Cartpage/cart.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cart page</title>
   <link rel="stylesheet" href="./cart.css">
-  <!-- <link rel="stylesheet" href="index.css"> -->
+   <link rel="stylesheet" href="index.css"> -->
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -134,7 +134,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cart page</title>
   <link rel="stylesheet" href="./cart.css">
-  <!-- <link rel="stylesheet" href="index.css"> -->
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -187,8 +187,6 @@
   <div id="checkout-page">
 
     <div>
-
-
 
       <h3 id="total2"> Total products = <span id="prod">0</span></h3>
       <h3 id="totalprice2">Your total bill = <span id="totalp">0</span></h3>
