--- a/Cartpage/cart.html
+++ b/Cartpage/cart.html
@@ -1,130 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cart page</title>
-  <link rel="stylesheet" href="./cart.css">
-   <link rel="stylesheet" href="index.css"> -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head> --> -->
-
-<!-- <body>
-
-
-  <nav>
-    <div id="nav">
-      <div id="logo">
-        <img src="./web.jpg" alt="">
-      </div>
-      <div id="menu">
-        <div class="blocks">
-          <i class="material-icons" style="color: white;">help_outline</i>
-          <h4 style="color: white;">Help</h4>
-        </div>
-        <div class="blocks">
-          <i class="material-icons" style="color: white;">shopping_bag</i>
-          <h4 style="color: white;">Cart</h4>
-        </div>
-        <div class="blocks">
-          <h2 id="username"></h2>
-        </div>
-      </div>
-    </div>
-  </nav> -->
-
-  <!-- cart data conformation -->
- 
-  <!-- <div class="image-container">
-    <div class="text">CART PAGE</div>
-  </div> -->
-
-<!-- continue shopping -->
-  <!-- <div id="shopping">
-    <a href="/Shopping Page/shopping.html"><i class="arrow left"></i>-Continue Shopping</a>
-  </div> -->
-  <!-- nav bar  -->
-
-  <!-- <h2 id="total">Your total Products in the Cart = <span id="fav-total">0</span></h2>
-  <h3 id="totalprice">Your total bill = <span id="fav-sum">0</span></h3> -->
-
-  <!-- for discount  -->
-  <!-- <div class="alert">
-    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-    <strong>Perk Alert:</strong>  All new Rewards members get 20% off any purchase.
-  </div> -->
-
-
-  <!-- empty cart -->
-  <!-- <h1 id="empty-cart"></h1> -->
-
-  <!-- added Data to cart -->
-  <!-- <div id="addedData">
-
-  </div> -->
-
- 
-  <!-- checkout page -->
-
-  <!-- <div id="checkout-page">
-
-    <div>
-
-      <h3 id="total2"> total products = <span id="prod">0</span></h3>
-      <h3 id="totalprice2">Your total bill = <span id="totalp">0</span></h3>
-      <h3 id="tax">SALES TAX = <span id="tax2"></span></h3>
-      <hr>
-      <h3 id="finaltotal">ORDER TOTAL = <span id="ordert"></span></h3>
-      <hr>
-      <button id="pay2"><a href="/payment/checkout.html">CHECKOUT</a>
-    </div> -->
-
-    <!-- <div class="vl"></div>
-    <div>
-      <h3>Apply <span class="promo">BOH232</span> to get 20% discount</h3>
-      <p>Expires: Jan 29, 2023</p>
-      <form action="" id="discounttag">
-        <input type="text" placeholder="Apply BOH232" id="cupon-filled">
-        <button id="changetext">submit</button>
-      </form>
-    </div>
-
-
-  </div> -->
-
-
-  <!-- bottom part -->
-
-  <!-- <div id="bottom">
-    <div>Copyright © 1996-2023 UpStore. All rights reserved.</div>
-
-    <div></div>
-
-    <div id="copyright">
-        <div>Home</div>
-        <div>Sell on UpStore </div>
-        <div>FAQ </div>
-        <div>Terms of Use </div>
-        <div> Privacy Policy</div>
-    </div>
-</div> -->
-
-
-  <!-- <script src="https://kit.fontawesome.com/70e0f6f431.js" crossorigin="anonymous"></script>
-</body>
-
-</html>
-
-<script src="cart.js"></script> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -134,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cart page</title>
   <link rel="stylesheet" href="./cart.css">
-
+  <!-- <link rel="stylesheet" href="index.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -186,7 +59,11 @@
   <!-- checkout page -->
   <div id="checkout-page">
 
+
+
     <div>
+
+
 
       <h3 id="total2"> Total products = <span id="prod">0</span></h3>
       <h3 id="totalprice2">Your total bill = <span id="totalp">0</span></h3>
